--- a/style.css
+++ b/style.css
@@ -12,5 +12,7 @@
     padding-left: 2%; 
     margin: 0%;
 }
-.myTable { width: 45% }
+.myTable { width: 45%;
+           border-collapse: collapse; } 
+td, th {   border: 1px solid rgb(0, 0, 0);   padding: 8px; }
 
